--- a/src/Components/JobScreen/JobScreen.css
+++ b/src/Components/JobScreen/JobScreen.css
@@ -1,50 +1,59 @@
 @import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";
-section {
-  background-color: var(--Top-bg);
-  font-family: var(--font-family);
-}
+
 .job-screen {
   background-color:transparent;
   color: #fff;
   font-family: var(--font-family);
 }
-.form-control {
+.job-screen .form-control {
   width: 70%;
   border-radius: 5px 0px 0px 5px / 5px 0px 0px 5px;
   display: inline-block;
 }
-.btn:hover {
+.job-screen .line-after{
+  position: relative;
+  }
+
+  .job-screen .line-after::after {
+  content: "";
+  width: 80px;
+  border-bottom: 1px solid var(--Primary);
+  position: absolute;
+  left: 0px;
+  bottom: -5px;
+  }
+.job-screen .btn:hover {
   background-color: var(--btn-hover);
 } 
 @media (max-width: 767px) {
-  .form-control {
+  .job-screen .form-control {
     width: 100%;
     border-radius: 5px;
     height: 40px;
     border-radius: 5px;
   }
- .job-screen .btn1 {
+  .job-screen .job-screen .btn1 {
     width: 100%;
     border-radius: 5px;
   }
-  .jobs-details{text-align: left !important;
+  .job-screen .jobs-details{text-align: left !important;
 }
-.menu-job{display: none;}
+.job-screen .menu-job{display: none;}
 }
-.input-sub {
+.job-screen .input-sub {
   background: rgba(128, 128, 128, 0.438);
   border: none;
   color: var(--white);
   border-radius: 6px;
 }
 
-.input-sub:focus {
+.job-screen .input-sub:focus {
   border: 1px solid var(--btn-defauit);
   box-shadow: none;
   background-color: var(--Gradient-bg);
   color: var(--white);
 }
-.btn-subscribe {
+.job-screen .btn-subscribe {
   background-color: var(--btn-defauit);
   border: 0px;
   font-weight: var(--fw-600);
@@ -59,12 +68,12 @@ section {
 
 }
 
-.btn-subscribe:focus,
-.btn-subscribe:hover {
+.job-screen .btn-subscribe:focus,
+.job-screen .btn-subscribe:hover {
   background-color: var(--btn-hover) !important;
 }
 
-.input-sub::placeholder {
+.job-screen .input-sub::placeholder {
   color: white;
   font-size: 20px;
   }
