--- a/src/Pages/Courses/Courses.css
+++ b/src/Pages/Courses/Courses.css
@@ -1,18 +1,19 @@
-.button {
+.courses-page .button {
   background-color: #bf9b30;
   border: none;
   padding: 10px 20px;
   border-radius: 7px !important;
   transition: all .4s ease;
 }
-.button:hover {
+.courses-page .button:hover {
   background-color: #e7bc3c !important;
 }
-.card {
+.courses-page .card {
   color: white;
+  background-color:rgba(0, 0, 0, 0.196);
 }
 
-.card-img-overlay {
+.courses-page .card-img-overlay {
   background: url(../../assets/images/Rectangle\ 60.png);  
   color: white;
   background-size: cover;
@@ -20,74 +21,74 @@
   background-repeat: no-repeat;
   background-position: center;
 }
-.title {
+.courses-page .title {
   font-size: 1.5rem;
 }
 
-.main-color {
+.courses-page  .main-color {
   color: #ff9900;
 }
 
 
-.card .button {
+.courses-page  .card .button {
   width: 95%;
   background-color: #bf9b30;
   border: none;
   text-align: center;
 }
-.jobs {
+.courses-page .jobs {
   color: #fff;
   line-height: 15px;
 }
-.card .img {
+.courses-page .card .img {
   padding: 1rem 1rem 0 1rem;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 235px 134px;
 }
-.card .card-link {
+.courses-page .card .card-link {
   color: white !important;
   font-weight: 600;
 }
-.row {
+.courses-page .row {
   justify-content: space-evenly;
 }
    /* Media Query for mobile view */
    @media (max-width: 767px) {
-    .search-container {
+    .courses-page  .search-container {
        width: 100%;
        margin-top: 10px;
     }
  
-    .search-icon {
+    .courses-page  .search-icon {
        right: 10px;
     }
     }
-    #search {
+    .courses-page #search {
     background: rgba(187, 186, 186, 0.189);
     border: 1px solid transparent;
     border-radius: 50px;
     padding: 12px 85px;
     width: 100%;
     }
-    #search::placeholder {
+    .courses-page #search::placeholder {
     text-align: center;
     color: white;
     font-size: 20px;
     }
-    .search-container {
+    .courses-page .search-container {
     position: relative;
     display: inline-block;
     }
  
-    .search-icon {
+    .courses-page .search-icon {
     position: absolute;
     top: 50%;
     right: 20px;
     transform: translateY(-50%);
     }
 
-    .horizontal-scroll-container {
+    .courses-page .horizontal-scroll-container {
       overflow-x: auto;
       white-space: nowrap;
       scroll-behavior: smooth; 
@@ -95,10 +96,22 @@
        
     }
     
-    .horizontal-scroll-content {
+    .courses-page .horizontal-scroll-content {
       display: inline-flex;
     }
-    .horizontal-scroll-container::-webkit-scrollbar {
+    .courses-page .horizontal-scroll-container::-webkit-scrollbar {
       display: none; 
     }
     
+    .courses-page  .line-after{
+      position: relative;
+      }
+   
+      .courses-page .line-after::after {
+      content: "";
+      width: 80px;
+      border-bottom: 1px solid var(--Primary);
+      position: absolute;
+      left: 0px;
+      bottom: -5px;
+      }
