--- a/src/StyleForAllComponents/StyleForAllComponents.css
+++ b/src/StyleForAllComponents/StyleForAllComponents.css
@@ -56,7 +56,7 @@
    body {
    font-family: "Open Sans", sans-serif;
    }
-   .admin-panel .bg-image {
+   .admin-panel .bg-image ,.jobs .bg-image , .courses-page .bg-image{
    background: url(../assets/images/secondary_background.jpg);
 
    background-position: center;
@@ -66,7 +66,7 @@
    background-attachment: fixed;
    }
 
-   .admin-panel .bg-layer {
+   .admin-panel .bg-layer ,.jobs .bg-layer, .courses-page .bg-layer {
    min-height: 100vh;
    background: linear-gradient(
       180deg,
