--- a/src/StyleForAllComponents/StyleForAllComponents.css
+++ b/src/StyleForAllComponents/StyleForAllComponents.css
@@ -1,167 +1,177 @@
-   :root {
-   /* Colors */
-   --Primary: #bf9b30;
-   --secondary: #edd587;
-   --Green: #34a853;
-   --Red: #ea4335;
-   --Grey: #817f7f;
-   --black: #1a1919;
-   --white: #fff;
-   --alpha-bg: #1515167e;
-   --top-bg: #151516be;
-   --footer-bg: #212121;
-   --content-bg: #2a2a2a;
+:root {
+  /* Colors */
+  --Primary: #bf9b30;
+  --secondary: #edd587;
+  --Green: #34a853;
+  --Red: #ea4335;
+  --Grey: #817f7f;
+  --black: #1a1919;
+  --white: #fff;
+  --alpha-bg: #1515167e;
+  --top-bg: #151516be;
+  --footer-bg: #212121;
+  --content-bg: #2a2a2a;
 
-   /* Colors of Button */
-   --btn-defauit: #bf9b30;
-   --btn-hover: #e7bc3c;
-   --btn-disabled: #e1e1e1;
-   }
-   .main-color {
-   color: var(--Primary) !important;
-   }
-   .main-border-color {
-   border-color: var(--Primary) !important;
-   }
-   .Black-div {
-   background-color: var(--alpha-bg) !important;
-   }
-   .Black-bg {
-   background-color: var(--Black-color);
-   }
-   .Secondary-bg {
-   background: var(--Primary) !important;
-   }
-   .Default-bg {
-   background: var(--Primary) !important;
-   }
-   .bg:hover {
-   background: var(--Primary) !important;
-   }
-   .Disabled-bg {
-   background: var(--Grey) !important;
-   }
-   .Reject-bg {
-   background: var(--Red) !important;
-   }   
-   .transition {
-   transition: all 0.4s ease;
-   }   
-   .hover-bg-color:hover {
-   background-color: var(--btn-hover) !important;
-   }
-   .hover-color:hover {
-   color: var(--btn-hover) !important;
-   }
-   body {
-   font-family: "Open Sans", sans-serif;
-   }
-   .admin-panel .bg-image ,.jobs .bg-image , .courses-page .bg-image{
-   background: url(../assets/images/secondary_background.jpg);
+  /* Colors of Button */
+  --btn-defauit: #bf9b30;
+  --btn-hover: #e7bc3c;
+  --btn-disabled: #e1e1e1;
+}
+.main-color {
+  color: var(--Primary) !important;
+}
+.main-border-color {
+  border-color: var(--Primary) !important;
+}
+.Black-div {
+  background-color: var(--alpha-bg) !important;
+}
+.Black-bg {
+  background-color: var(--Black-color);
+}
+.Secondary-bg {
+  background: var(--Primary) !important;
+}
+.Default-bg {
+  background: var(--Primary) !important;
+}
+.bg:hover {
+  background: var(--Primary) !important;
+}
+.Disabled-bg {
+  background: var(--Grey) !important;
+}
+.Reject-bg {
+  background: var(--Red) !important;
+}
+.transition {
+  transition: all 0.4s ease;
+}
+.hover-bg-color:hover {
+  background-color: var(--btn-hover) !important;
+}
+.hover-color:hover {
+  color: var(--btn-hover) !important;
+}
+body {
+  font-family: "Open Sans", sans-serif;
+}
+.admin-panel .bg-image,
+.jobs .bg-image,
+.courses-page .bg-image,
+.create-course .bg-image,
+.create-job .bg-image {
+  background: url(../assets/images/secondary_background.jpg);
 
-   background-position: center;
-   background-size: cover;
-   min-height: 100vh;
-   background-repeat: no-repeat;
-   background-attachment: fixed;
-   }
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 
-   .admin-panel .bg-layer ,.jobs .bg-layer, .courses-page .bg-layer {
-   min-height: 100vh;
-   background: linear-gradient(
-      180deg,
-      rgba(24, 24, 24, 0.89) 0%,
-      rgba(27, 26, 26, 0.93) 47.92%,
-      rgba(26, 25, 25, 1) 100%
-   );
-   }
-   .admin-list  .icon {
-   cursor: pointer;
-   transition: all 0.4s ease;
-   }
+.admin-panel .bg-layer,
+.jobs .bg-layer,
+.courses-page .bg-layer,
+.create-course .bg-layer,
+.create-job .bg-layer {
+  min-height: 100vh;
+  background: linear-gradient(
+    180deg,
+    rgba(24, 24, 24, 0.89) 0%,
+    rgba(27, 26, 26, 0.93) 47.92%,
+    rgba(26, 25, 25, 1) 100%
+  );
+}
+.admin-list .icon {
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
 
-   .admin-list  .rounded-btn {
-   border-radius: 50px;
-   padding: 5px 15px;
-   width: 105px;
-   transition: all 0.4s ease;
-   }
-   .admin-list  .rounded-btn :hover {
-   background-color: var(--Hover-color) !important;
-   }
+.admin-list .rounded-btn {
+  border-radius: 50px;
+  padding: 5px 15px;
+  width: 105px;
+  transition: all 0.4s ease;
+}
+.admin-list .rounded-btn :hover {
+  background-color: var(--Hover-color) !important;
+}
 
-   /* Media Query for mobile view */
-   @media (max-width: 767px) {
-      .admin-list  .search-container {
-      width: 100%;
-      margin-top: 10px;
-   }
+/* Media Query for mobile view */
+@media (max-width: 767px) {
+  .admin-list .search-container {
+    width: 100%;
+    margin-top: 10px;
+  }
 
-   .admin-list .search-icon {
-      right: 10px;
-   }
-   }
-   .admin-panel-title .line-after ,.admin-list .line-after{
-   position: relative;
-   }
+  .admin-list .search-icon {
+    right: 10px;
+  }
+}
+.admin-panel-title .line-after,
+.admin-list .line-after {
+  position: relative;
+}
 
-   .admin-panel-title .line-after::after ,.admin-list .line-after::after {
-   content: "";
-   width: 80px;
-   border-bottom: 1px solid var(--Primary);
-   position: absolute;
-   left: 0px;
-   bottom: -5px;
-   }
-   .admin-list  .search {
-   background: rgba(187, 186, 186, 0.189);
-   border: 1px solid transparent;
-   border-radius: 50px;
-   padding: 9px 90px;
-   width: 100%;
-   }
-   .admin-list  .search::placeholder {
-   text-align: center;
-   color: white;
-   font-size: 20px;
-   }
-   .admin-list .search-container {
-   position: relative;
-   display: inline-block;
-   }
+.admin-panel-title .line-after::after,
+.admin-list .line-after::after {
+  content: "";
+  width: 80px;
+  border-bottom: 1px solid var(--Primary);
+  position: absolute;
+  left: 0px;
+  bottom: -5px;
+}
+.admin-list .search {
+  background: rgba(187, 186, 186, 0.189);
+  border: 1px solid transparent;
+  border-radius: 50px;
+  padding: 9px 90px;
+  width: 100%;
+}
+.admin-list .search::placeholder {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+}
+.admin-list .search-container {
+  position: relative;
+  display: inline-block;
+}
 
-   .admin-list .search-icon {
-   position: absolute;
-   top: 50%;
-   right: 20px;
-   transform: translateY(-50%);
-   }
+.admin-list .search-icon {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+}
 
-   .admin-list .dropdown-toggle::after {
-   display: none;
-   }
-   .admin-list  .dropdown-item:hover {
-   background-color: transparent;
-   }
-   .admin-list  .dropdown-menu {
-   /* background-color:var(--alpha-bg); */
-   background: rgb(128, 128, 128);
+.admin-list .dropdown-toggle::after {
+  display: none;
+}
+.admin-list .dropdown-item:hover {
+  background-color: transparent;
+}
+.admin-list .dropdown-menu {
+  /* background-color:var(--alpha-bg); */
+  background: rgb(128, 128, 128);
 
-   width: 100%;
-   }
-   .admin-list  .nav-link:hover,
-   .admin-list  .dropdown-item:hover,
-   .admin-list  .nav-link span:hover {
-   color: var(--Primary) !important;
-   }
-   .admin-list  .drop-down-bg {
-   background: rgba(128, 128, 128, 0.438);
-   border: 1px solid transparent;
-   width: 100%;
-   }
-   .admin-list  .font-s-20 {
-   font-size: 20px !important;
-   }
-   .admin-list  .font-s-18 {
-   font-size: 18px !important;
-   }
+  width: 100%;
+}
+.admin-list .nav-link:hover,
+.admin-list .dropdown-item:hover,
+.admin-list .nav-link span:hover {
+  color: var(--Primary) !important;
+}
+.admin-list .drop-down-bg {
+  background: rgba(128, 128, 128, 0.438);
+  border: 1px solid transparent;
+  width: 100%;
+}
+.admin-list .font-s-20 {
+  font-size: 20px !important;
+}
+.admin-list .font-s-18 {
+  font-size: 18px !important;
+}
