--- a/src/Components/CreateAndUpdatecourses/CreateAndUpdatecourses.css
+++ b/src/Components/CreateAndUpdatecourses/CreateAndUpdatecourses.css
@@ -5,13 +5,15 @@
     justify-content: center;
     text-align: center;
     padding: 23px 13px;
-    border: 1px dashed #708037;
+    border: 1px dashed #bf9b30;
+    border-radius: 5px;
+    height: 270px;
     
 }
 
 .create-course .upload-icon {
-    font-size: 30px;
-    color: #708037;
+    font-size: 60px;
+    color: #bf9b30;
 }
 
 .create-course .drag-title {
@@ -19,7 +21,7 @@
 }
 
 .create-course .drag-title span {
-    color: #708037;
+    color: #bf9b30;
 }
 .create-course .drag-title{
     font-size: 14px;
@@ -39,8 +41,8 @@
     bottom: -7px;
     left: 0;
     height: 2px;
-    width: 270px;
-    background-color: #bacc16;
+    width: 60px;
+    background-color: #bf9b30;
 }
 
 .create-course label {
@@ -55,9 +57,11 @@
 
 .create-course .section-header button {
     padding: 5px 45px;
-    background-color: #afa531;
+    background-color: #bf9b30;
     color: white;
     border-radius: 5px;
+    border: 1px solid  transparent;
+
 }
 
 .create-course .textarea_about_company {
@@ -65,14 +69,73 @@
     height: 120px;
 }
 .create-course .save{
-    padding: 5px 45px;
-    background-color: #afa531;
+    padding: 10px 45px;
+    background-color: #bf9b30;
     color: white;
-    border-radius: 5px;
+    border-radius: 7px;
+    min-width: 20%;
+    font-size: 18px;
+    border: 1px solid  transparent;
+
 }
 .create-course .cancel{
     padding: 5px 45px;
-    background-color: #555552;
+    background-color: #817f7f;
     color: white;
-    border-radius: 5px;
+    border-radius: 7px;
+    min-width: 20%;
+    font-size: 18px;
+    border: 1px solid  transparent;
+
+
 }
+.create-course .line-after  {
+    position: relative;
+  }
+  
+  .create-course .line-after::after {
+    content: "";
+    width: 80px;
+    border-bottom: 1px solid var(--Primary);
+    position: absolute;
+    left: 0px;
+    bottom: -5px;
+  }
+   .create-course .grey-color{
+    background: rgba(187, 186, 186, 0.189);
+    border: 1px solid transparent;
+  
+}
+.create-course .add-lesson{
+    padding: 23px 13px;
+    border: 1px dashed #bf9b30;
+    border-radius: 5px;
+    height: auto;
+    padding:10px;
+
+}
+.create-course Form.selecte{
+    position: relative;
+}
+.create-course .drop-icon{
+    position: absolute;
+    top: 65%;
+    left: 55%;
+}
+@media (max-width: 767px) {
+    .create-course .drop-icon {
+      width: 100%;
+      /* margin-top: 1px; */
+      top: 62%;
+      
+    }
+  
+    .create-course .drop-icon{
+        /* left: 60%; */
+    }
+  }
+  .admin-panel-title .line-after,
+  .admin-list .line-after {
+    position: relative;
+  }
+  
